complete the script and readme

--- a/elastic-cache-ha/elasticache-ha-deployment.yaml
+++ b/elastic-cache-ha/elasticache-ha-deployment.yaml
@@ -30,6 +30,7 @@ Resources:
       - Ref: SubnetC
   Cache:
     Type: 'AWS::ElastiCache::ReplicationGroup'
+    ReplicationGroupId: !Ref AWS::StackName
     Properties:
       ReplicationGroupDescription: 'HA Redis Cluster'
       Engine: redis
