add readmi and key variable

--- a/vpc-peering/vpc-singapore-setup.yaml
+++ b/vpc-peering/vpc-singapore-setup.yaml
@@ -7,7 +7,7 @@ Parameters:
     Default: "10.1.0.0/16"
     Description: "CIDR block untuk VPC di Singapura"
   KeyPairName:
-    Description: Key Pair untuk akses instance di Jakarta (sesuaikan dengan Key Pair yang diperlukan)
+    Description: Key Pair untuk akses instance EC2 di Region Singapore (sesuaikan dengan Key Pair yang sudah ada)
     Type: String
 
 Resources:
