--- a/vpc-peering/vpc-jakarta-setup.yaml
+++ b/vpc-peering/vpc-jakarta-setup.yaml
@@ -6,9 +6,8 @@ Parameters:
     Type: String
     Default: "10.0.0.0/16"
     Description: "CIDR block untuk VPC di Jakarta"
-    
   KeyPairName:
-    Description: Key Pair untuk akses instance di Jakarta (sesuaikan dengan Key Pair yang diperlukan)
+    Description: Key Pair untuk akses instance EC2 di Region Jakarta (sesuaikan dengan Key Pair yang sudah ada)
     Type: String
 
 Resources:
