--- a/scalable-app-with-ec2/scalable-app-with-ec2.yaml
+++ b/scalable-app-with-ec2/scalable-app-with-ec2.yaml
@@ -198,11 +198,8 @@ Resources:
       Protocol: HTTP
       Port: 80
       DefaultActions:
-        - Type: "fixed-response"
-          FixedResponseConfig:
-            StatusCode: "200"
-            ContentType: "text/plain"
-            MessageBody: "OK"
+        - Type: "forward"
+          TargetGroupArn: !Ref MyTargetGroup
 
   # Launch Template for Auto Scaling Group with KeyName
   MyLaunchTemplate:
@@ -232,7 +229,7 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref MyLaunchTemplate
         Version: !GetAtt MyLaunchTemplate.LatestVersionNumber
-      MinSize: "1"
+      MinSize: "2"
       MaxSize: "3"
       TargetGroupARNs:
         - !Ref MyTargetGroup
